--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,15 @@ body {
     flex-direction: column;
     min-height: 100%;
 }
+.page-center {
+    min-height: calc(90vh - 60px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    text-align: center;
+}
 
 body.no-scroll {
     overflow: hidden;
